--- a/nlp/admin/web/src/app/applications/applications/applications.component.html
+++ b/nlp/admin/web/src/app/applications/applications/applications.component.html
@@ -35,13 +35,15 @@
           <button routerLink="edit/{{app._id}}" md-mini-fab mdTooltip="Edit"><md-icon>edit</md-icon></button>
           <span class="action-spacing"></span>
           <button (click)="downloadDump(app)" md-icon-button mdTooltip="Download an application dump"><md-icon>file_download</md-icon></button>
+          <button (click)="downloadSentencesDump(app)" md-icon-button mdTooltip="Download a sentences dump"><md-icon>cloud_download</md-icon></button>
+
         </md-list-item>
       </md-list>
     <p></p>
   </md-card-content>
   <md-card-actions *ngIf="!uploadDump">
     <button (click)="showUploadDumpPanel()" md-button>
-      Upload Application Dump
+      Upload Dump
     </button>
     <button md-raised-button routerLink="create" color="primary">Create New
       Application
