better role copy in create entity admin dialog
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.html
@@ -43,7 +43,7 @@
     With role :
 
     <md-input-container>
-      <input mdInput placeholder="Role" [(ngModel)]="role">
+      <input mdInput placeholder="Role" [(ngModel)]="role" (keydown)="onRoleKeyDown($event)">
     </md-input-container>
   </p>
 
