--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -24,6 +24,7 @@
         <input mdInput placeholder="New application name" [(ngModel)]="application.name"
                (keyup.enter)="saveApplication()">
       </md-input-container>
+      <md-checkbox [(ngModel)]="application.mergeEngineTypes" md-tooltip="If selected, this option uses built-in entity models (like dates) in conjunction with standard NER">Use entity models</md-checkbox>
     </md-card>
     <md-card *ngIf="state.locales" class="locales">
       <md-card-header>
