add sentence status in search results
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/search/search.component.html
+++ b/nlp/admin/web/src/app/search/search.component.html
@@ -15,7 +15,7 @@
   -->
 
 <div class="search">
-  <tock-sentences-scroll [filter]="filter" title="">
+  <tock-sentences-scroll [filter]="filter" title="" [displayStatus]="true">
     <md-card>
       <md-card-content>
         <md-input-container class="search-input">
