--- a/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
+++ b/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
@@ -36,7 +36,8 @@
       <tock-sentence-analysis [sentence]="d"
                               (closed)="onClose($event)"
                               [displayArchiveButton]="displayArchiveButton"
-                              [displayProbabilities]="displayProbabilities"></tock-sentence-analysis>
+                              [displayProbabilities]="displayProbabilities"
+                              [displayStatus]="displayStatus"></tock-sentence-analysis>
     </div>
   </div>
 </div>
