--- a/bot/admin/web/src/app/bot/intent/create-bot-intent.component.html
+++ b/bot/admin/web/src/app/bot/intent/create-bot-intent.component.html
@@ -18,24 +18,24 @@
   <md-card-content>
     <tock-select-bot [(configurationId)]="botConfigurationId">
       <br>
-      <md-input-container class="sentence-input" #newSentenceContainer>
+      <md-form-field class="sentence-input" #newSentenceContainer>
         <input mdInput
                [(ngModel)]="text"
                placeholder="Enter a sentence"
                #newSentence
                (keyup.enter)="onSentence(newSentence.value)">
-      </md-input-container>
+      </md-form-field>
       <button *ngIf="!sentence" md-button (click)="onSentence(newSentence.value)">New Sentence</button>
       <br>
       <span *ngIf="sentence">
-      <md-input-container class="sentence-input" #newReplyContainer>
+      <md-form-field class="sentence-input" #newReplyContainer>
         <input mdInput [(ngModel)]="reply" placeholder="And add a reply" #newReply (keyup.enter)="onReply()">
-      </md-input-container>
+      </md-form-field>
       <button (click)="onReply()" md-raised-button color="primary">Reply</button>
       <br>
-      <md-input-container class="sentence-intent" #intentContainer>
+      <md-form-field class="sentence-intent" #intentContainer>
         <input mdInput [(ngModel)]="intent" placeholder="Set the intent name" #newIntent (keyup.enter)="onReply()">
-      </md-input-container>
+      </md-form-field>
     </span>
     </tock-select-bot>
   </md-card-content>
