resolves #79 Add a model cron test to check quality model
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot-admin-app.component.html
+++ b/bot/admin/web/src/app/bot-admin-app.component.html
@@ -28,6 +28,9 @@
         <a routerLink="/nlp/inbox">NLP</a>
       </md-list-item>
       <md-list-item>
+        <a routerLink="/quality/test-builds">NLP QA</a>
+      </md-list-item>
+      <md-list-item>
         <a routerLink="/build/intent-create">Build</a>
       </md-list-item>
       <md-list-item>
