--- a/nlp/admin/web/src/app/nlp-admin-app.component.html
+++ b/nlp/admin/web/src/app/nlp-admin-app.component.html
@@ -27,6 +27,9 @@
       <md-list-item>
         <a routerLink="/nlp/inbox">NLP</a>
       </md-list-item>
+      <md-list-item>
+        <a routerLink="/quality/test-builds">NLP QA</a>
+      </md-list-item>
     </md-list>
   </md-sidenav>
 
