fixes typo on menu link
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot-admin-app.component.html
+++ b/bot/admin/web/src/app/bot-admin-app.component.html
@@ -28,7 +28,7 @@
         <a routerLink="/nlp/inbox">NLP</a>
       </md-list-item>
       <md-list-item>
-        <a routerLink="/quality/test-builds">NLP QA</a>
+        <a routerLink="/quality/log-stats">NLP QA</a>
       </md-list-item>
       <md-list-item>
         <a routerLink="/build/intent-create">Build</a>
